Ajustando tempo de cache do java para DNS para 10 segundos E tempo aguardando uma conexao livre 5 segundos.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 #spring.datasource.username=admin
 #spring.datasource.password=
 
-spring.datasource.url=jdbc-secretsmanager:mysql://meubanco.cn8dri6vcjdd.us-east-1.rds.amazonaws.com
-spring.datasource.username=rds/segredo/meubanco
+spring.datasource.url=jdbc-secretsmanager:mysql://meubanco-1.crcektiyhm4l.sa-east-1.rds.amazonaws.com
+spring.datasource.username=prd/mysql/meubanco
 spring.datasource.driver-class-name=com.amazonaws.secretsmanager.sql.AWSSecretsManagerMySQLDriver
+spring.datasource.hikari.connection-timeout=5000
